# rip-tui

./: .gitignore  PLAN.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/: reviewer.md  staff-review.md
config/: ripper.example.toml
docs/plans/: 2026-03-01-fix-batch-mode.md
src/ripper/: __init__.py  __main__.py  cli.py
src/ripper/config/: __init__.py  settings.py
src/ripper/core/: disc.py  organizer.py  pipeline.py  ripper.py  scanner.py
src/ripper/metadata/: classifier.py  discdb.py  matcher.py  tmdb.py
src/ripper/notifications/: __init__.py  notifier.py  slack.py  terminal.py
src/ripper/tui/: app.py  display.py  flows.py
src/ripper/tui/screens/: disc_info.py  main.py  organize.py  rip.py  scan.py
src/ripper/tui/styles/: app.tcss
src/ripper/tui/widgets/: rip_progress.py  title_table.py
src/ripper/utils/: drive.py  formatting.py  matching.py
tests/: conftest.py  test_batch.py  test_classifier.py  test_discdb.py  test_discdb_classifier.py  test_flows.py  test_formatting.py  test_matcher.py  test_matching.py  test_notifications.py  test_organizer.py  test_pipeline.py  test_progress_debug.py  test_ripper.py  test_scanner.py  test_settings.py  test_tui_app.py
