[project]
name = "ripper"
version = "1.0.0"
description = "4K Blu-ray ripping utility with TUI for Emby media servers"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "makemkv>=0.3.0",
    "aiohttp>=3.9.0",
    "rapidfuzz>=3.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
rip = "ripper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ripper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
